[fix] remove red shadow from form input on firefox

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 	font-family: inherit;
 	font-size: inherit;
 	font-weight: inherit;
+	box-shadow: none;
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
